--- a/templates/login.html
+++ b/templates/login.html
@@ -23,27 +23,27 @@
                     {{ form.hidden_tag() }}
                     <fieldset class="form-group">
                         <div class="form-group">
-                            {{ form.email.label(class="form-control-label") }}
-                            {% if form.email.errors %}
-                            {{ form.email(class="form-control form-control-lg is-invalid") }}
-                                <div class="invalid-feedback">
-                                    {% for error in form.email.errors %}
-                                    <span>{{ error }}</span>
-                                    {% endfor %}
-                                </div>
+                            {{ form.username.label(class="form-control-label") }}
+                            {% if form.username.errors %}
+                                {{ form.username(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.username.errors %}
+                                        <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
                             {% else %}
-                                {{ form.email(class="form-control form-control-lg") }}
+                            {{ form.username(class="form-control form-control-lg") }}
                             {% endif %}
                         </div>
                         <div class="form-group">
                             {{ form.password.label(class="form-control-label") }}
                             {% if form.password.errors %}
-                            {{ form.password(class="form-control form-control-lg is-invalid") }}
-                                <div class="invalid-feedback">
-                                    {% for error in form.password.errors %}
-                                    <span>{{ error }}</span>
-                                    {% endfor %}
-                                </div>
+                                {{ form.password(class="form-control form-control-lg is-invalid") }}
+                                    <div class="invalid-feedback">
+                                        {% for error in form.password.errors %}
+                                        <span>{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
                             {% else %}
                                 {{ form.password(class="form-control form-control-lg") }}
                             {% endif %}
