--- a/donationTracker/templates/layout.html
+++ b/donationTracker/templates/layout.html
@@ -20,10 +20,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Locations</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Items</a>
+                            <a class="nav-link" href="{{ url_for('locations') }}">Locations</a>
                         </li>
                     </ul>
                     <div class="navbar-nav">
