--- a/donationTracker/templates/location.html
+++ b/donationTracker/templates/location.html
@@ -1,4 +1,42 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>{{ location.name }}<h1>
+<div class="card">
+  <h2 class="card-header">{{ location.name }}</h2>
+  <div class="card-body">
+    <h4>Location Information</h4>
+    <hr>
+    <p><strong>Type:</strong> {{ location.type }}</p>
+    <p><strong>Address:</strong> {{ location.address }}</p>
+    <p><strong>City:</strong> {{ location.city }}</p>
+    <p><strong>State:</strong> {{ location.state }}</p>
+    <p><strong>Zip:</strong> {{ location.zip }}</p>
+    <p><strong>Phone:</strong> {{ location.phone }}</p>
+    <p><strong>Website:</strong><a href="#"> {{ location.website }}</a>
+    <hr>
+    <nav class="navbar navbar-light bg-white">
+        <h4>Donation List</h4>
+        <form class="form-inline">
+        {% if current_user.user_type == 'location_employee'%}
+            <a class="btn btn-secondary" href="{{ url_for('add_item', location_id=location.id)}}">Add Item</a>
+        {% endif %}
+        </form>
+    </nav>
+    <hr>
+    <div class="row">
+    {% for item in items %}
+        <div class="col-sm-4 mb-3">
+            <div class="card bg-light">
+              <div class="card-header" style="background-color: #a8d0e6"></div>
+              <div class="card-body">
+                <h5><a href="{{ url_for('item', item_id=item.id) }}">{{ item.name }}</a></h5>
+                <hr>
+                <p class="card-text">{{ item.description }}</p>
+                <p class="card-text"><small class="text-muted">{{ item.date_time.strftime('%Y-%m-%d') }}</small></p>
+              </div>
+            </div>
+        </div>
+    {% endfor %}
+    </div>
+  </div>
+</div>
 {% endblock content %}
