--- a/donationTracker/templates/locations.html
+++ b/donationTracker/templates/locations.html
@@ -1,20 +1,22 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Location List</h1>
+    <nav class="navbar navbar-light bg-white">
+        <h1 class="m-0">Location List</h1>
+        <a class="btn btn-md btn-dark" href="{{ url_for('new_location')}}">Create Location</a>
+    </nav>
     <hr>
     {% for location in locations %}
-    <div class="card">
-        <div class="card-header">
-        Location {{ location.id }}
+        <div class="card">
+            <div class="card-header" style="background-color: #f76c6c">
+            </div>
+            <div class="card-body">
+                <h4 class="card-title"><a href="{{ url_for('location', location_id=location.id) }}">{{ location.name }}</a></h4>
+                <hr>
+                <h5>{{ location.address }}  {{ location.city }}, {{ location.state }} {{ location.zip }} </h5>
+                <h5>{{ location.phone }}</h5>
+                <h5><a href="#">{{ location.website }}</a><h5>
+            </div>
         </div>
-        <div class="card-body">
-            <h3 class="card-title"><a href="{{ url_for('location', location_id=location.id) }}">{{ location.name }}</a></h3>
-            <hr>
-            <h5>{{ location.address }}  {{ location.city }}, {{ location.state }} {{ location.zip }} </h5>
-            <h5>{{ location.phone }}</h5>
-            <h5><a href="#">{{ location.website }}</a><h5>
-        </div>
-    </div>
-    <br>
+        <br>
     {% endfor %}
 {% endblock content %}
