--- a/donationTracker/templates/welcome.html
+++ b/donationTracker/templates/welcome.html
@@ -12,9 +12,10 @@
             <h1>DONATION TRACKER</h1>
         </div>
         <br>
+        <br>
         <div style='text-align:center'>
-            <a href="{{ url_for('login')}}" class="btn btn-outline-success btn-lg col-lg-3">LOGIN</a>
-            <a href="{{ url_for('register')}}"class="btn btn-outline-success btn-lg col-lg-3">REGISTER</a>
+            <a href="{{ url_for('login')}}" class="btn btn-outline-success btn-lg col-lg-3 mr-4">LOGIN</a>
+            <a href="{{ url_for('register')}}"class="btn btn-outline-success btn-lg col-lg-3 ml-4">REGISTER</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -23,7 +24,7 @@
 </body>
 <style>
     body {
-        padding-top: 75px;
+        padding-top: 100px;
     }
     #title h1 {
         text-align: center;
