M8 Added Search Functionalities for individual locations or all locations

--- a/donationTracker/templates/dashboard.html
+++ b/donationTracker/templates/dashboard.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>DASHBOARD</h1>
+    <h2>SEARCH</h2>
+    <hr>
+    <div class="card">
+        {% block child %}
+        {% endblock child %}
+    </div>
 {% endblock content %}
