--- a/donationTracker/templates/locations.html
+++ b/donationTracker/templates/locations.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <nav class="navbar navbar-light bg-white">
-        <h1 class="m-0">Location List</h1>
+        <h2 class="m-0">LOCATIONS</h2>
         <a class="btn btn-md btn-dark" href="{{ url_for('new_location')}}">Create Location</a>
     </nav>
     <hr>
