--- a/donationTracker/templates/location.html
+++ b/donationTracker/templates/location.html
@@ -1,17 +1,29 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="name">{{ location.name }}</div>
+<div class="lat">{{ location.lat }}</div>
+<div class="long">{{ location.long }}</div>
+<div class="phone">{{ location.phone }}</div>
+
 <div class="card">
   <h2 class="card-header">{{ location.name }}</h2>
   <div class="card-body">
     <h4>Location Information</h4>
     <hr>
-    <p><strong>Type:</strong> {{ location.type }}</p>
-    <p><strong>Address:</strong> {{ location.address }}</p>
-    <p><strong>City:</strong> {{ location.city }}</p>
-    <p><strong>State:</strong> {{ location.state }}</p>
-    <p><strong>Zip:</strong> {{ location.zip }}</p>
-    <p><strong>Phone:</strong> {{ location.phone }}</p>
-    <p><strong>Website:</strong><a href="#"> {{ location.website }}</a>
+    <div class="row">
+        <div class="col-md-6">
+            <p><strong>Type:</strong> {{ location.type }}</p>
+            <p><strong>Address:</strong> {{ location.address }}</p>
+            <p><strong>City:</strong> {{ location.city }}</p>
+            <p><strong>State:</strong> {{ location.state }}</p>
+            <p><strong>Zip:</strong> {{ location.zip }}</p>
+            <p><strong>Phone:</strong> {{ location.phone }}</p>
+            <p><strong>Website:</strong><a href="#"> {{ location.website }}</a>
+        </div>
+        <div class="col-md-6">
+            <div id="mapid"></div>
+        </div>
+    </div>
     <hr>
     <nav class="navbar navbar-light bg-white">
         <h4>Donation List</h4>
@@ -39,4 +51,19 @@
     </div>
   </div>
 </div>
+<script>
+    var lat = parseFloat($("div.lat").html());
+    var long = parseFloat($("div.long").html());
+    var name = $("div.name").html();
+    var phone = $("div.phone").html();
+    var mymap = L.map('mapid').setView([lat + 0.020, long], 13);
+    var marker = L.marker([lat, long]).addTo(mymap);
+    marker.bindPopup("<b>"+ name + "</b><br>" + phone).openPopup();
+    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    maxZoom: 18,
+    id: 'mapbox.streets',
+    accessToken: 'pk.eyJ1IjoiY3lhbmcyMyIsImEiOiJjanBheTdnc2gwMmsxM3BxZG1iaHRyemprIn0.mIeltoOkLoKILQD7Z2CUTw'
+    }).addTo(mymap);
+</script>
 {% endblock content %}
